--- a/public/css/weatheredGifs.css
+++ b/public/css/weatheredGifs.css
@@ -4,4 +4,40 @@ html, body
 {
 	width: 100%;
 	height: 100%;
+
+	overflow: hidden;
+
+	background: #000;
+}
+
+#display-wrapper
+{
+	width: 100%;
+	height: 100%;
+	position: relative;
+
+/*	background-image: url(../img/static.gif);
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;*/
+
+	font-size: 100px;
+}
+
+.display-content
+{
+	width: inherit;
+	height: inherit;
+	position: inherit;
+}
+
+.display-gif
+{
+	width: inherit;
+	height: inherit;
+	position: inherit;
+
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
