--- a/public/css/weatheredGifs.css
+++ b/public/css/weatheredGifs.css
@@ -1,13 +1,21 @@
 @charset "UTF-8";
 
+.tween-fix
+{
+	backface-visibility: hidden;
+}
+
+.hide
+{
+	visibility: hidden;
+}
+
 html, body
 {
 	width: 100%;
 	height: 100%;
 
-	overflow: hidden;
-
-	background: #000;
+	/*background: #000;*/
 }
 
 #display-wrapper
@@ -21,7 +29,9 @@ html, body
 	background-repeat: no-repeat;
 	background-size: cover;*/
 
-	font-size: 100px;
+	overflow: hidden;
+
+	font-size: 140px;
 }
 
 .display-content
@@ -29,6 +39,28 @@ html, body
 	width: inherit;
 	height: inherit;
 	position: inherit;
+}
+
+.display-text
+{
+	width: 80%;
+
+	position: absolute;
+	display: block;
+	left: 50%; top: 50%;
+
+	transform: translate(-50%, -50%);
+
+	font-size: 1em;
+	font-family: sans-serif;
+	font-weight: bolder;
+
+	text-transform: uppercase;
+	text-align: center;
+
+	color: #fff;
+
+	text-shadow: 0px 0px 80px rgba(0, 0, 0, 0.2);
 }
 
 .display-gif
@@ -40,4 +72,26 @@ html, body
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
+}
+
+.screen-fx
+{
+	width: 150%;
+	height: 150%;
+	position: absolute;
+	left: 0; right: 0; top: 0; bottom: 0;
+	margin: auto;
+
+	background-image: url(../img/interlace.png);
+	background-position: center center;
+	background-repeat: repeat;
+	background-size: 4px 4px;
+
+	animation: screenfxFrames 100ms linear infinite;
+}
+
+@keyframes screenfxFrames
+{
+	0%		{transform: translateY(0px);}
+	100%	{transform: translateY(-4px);}
 }
