--- a/public/css/weatheredGifs.css
+++ b/public/css/weatheredGifs.css
@@ -31,6 +31,7 @@ html, body
 
 	overflow: hidden;
 
+	font-family: 'Varela', sans-serif;
 	font-size: 140px;
 }
 
@@ -43,25 +44,44 @@ html, body
 
 .display-text
 {
-	width: 80%;
+	/*width: 80%;*/
+
+	padding: 0.2em;
 
 	position: absolute;
 	display: block;
-	left: 50%; top: 50%;
-
-	transform: translate(-50%, -50%);
 
 	font-size: 1em;
-	font-family: sans-serif;
 	font-weight: bolder;
 
 	text-transform: uppercase;
-	text-align: center;
 
 	color: #fff;
 
-	text-shadow: 0px 0px 80px rgba(0, 0, 0, 0.2);
+	/*background: #ff0033;*/
+
+	background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+
+	/*text-shadow: 0px 0px 80px rgba(0, 0, 0, 0.2);*/
+
+
 }
+
+.text-left
+{
+	text-align: left;
+	left: 0; bottom: 0;
+}
+
+.text-center
+{
+	text-align: center;
+
+	left: 50%; top: 50%;
+
+	transform: translate(-50%, -50%);
+}
+
 
 .display-gif
 {
