--- a/public/css/weatheredGifs.css
+++ b/public/css/weatheredGifs.css
@@ -24,11 +24,6 @@ html, body
 	height: 100%;
 	position: relative;
 
-/*	background-image: url(../img/static.gif);
-	background-position: center center;
-	background-repeat: no-repeat;
-	background-size: cover;*/
-
 	overflow: hidden;
 
 	font-family: 'Varela', sans-serif;
@@ -42,9 +37,27 @@ html, body
 	position: inherit;
 }
 
+.display-text-wrapper
+{
+	width: inherit;
+	height: inherit;
+	position: absolute;
+	left: 0; top: 0; right: 0; bottom: 0;
+
+	/*background: rgba(0, 255, 0, 0.2);*/
+
+	transition: 300ms ease-in-out;
+}
+
+.display-text-wrapper-default
+{
+	transform: scale(0);
+	opacity: 0;
+}
+
 .display-text
 {
-	/*width: 80%;*/
+	width: 100%;
 
 	padding: 0.2em;
 
@@ -58,27 +71,10 @@ html, body
 
 	color: #fff;
 
-	/*background: #ff0033;*/
-
 	background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
-
-	/*text-shadow: 0px 0px 80px rgba(0, 0, 0, 0.2);*/
-
-	transform: scale(1);
-
-
 }
 
-.display-text-tween
-{
-	transition: 300ms ease-in-out;
-}
 
-.display-text-default
-{
-	/*transform: scale(0);*/
-	opacity: 0;
-}
 
 .text-left
 {
