--- a/public/css/weatheredGifs.css
+++ b/public/css/weatheredGifs.css
@@ -46,13 +46,15 @@ html, body
 
 	/*background: rgba(0, 255, 0, 0.2);*/
 
-	transition: 300ms ease-in-out;
+	transition: 600ms ease-in-out;
 }
 
 .display-text-wrapper-default
 {
-	transform: scale(0);
-	opacity: 0;
+/*	transform: scale(0);
+	opacity: 0;*/
+
+	transform: translateY(100%);
 }
 
 .display-text
