Continued amends, issues with temperature display

--- a/public/css/weatheredGifs.css
+++ b/public/css/weatheredGifs.css
@@ -32,7 +32,7 @@ html, body
 
 	font-family: 'Libre Barcode 39 Text', cursive;
 
-	font-size: 140px;
+	font-size: 10vw;
 }
 
 .display-content
@@ -47,7 +47,7 @@ html, body
 	width: inherit;
 	height: inherit;
 	position: absolute;
-	left: 0; top: 0; right: 0; bottom: 0;
+	left: 0; top: 0;
 
 	transition: 600ms ease-in-out;
 }
@@ -57,58 +57,76 @@ html, body
 	transform: translateY(100%);
 }
 
-.display-text
+.display-type-content
 {
-	width: 100%;
+	width: auto;
 	height: auto;
 	position: absolute;
 
-	bottom: 0;
+	top: 0;
 
-	background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+	background: rgba(237, 247, 237, 0.8);
+
+	-webkit-filter: blur(1px);
+	filter: blur(0.6px);
+
+	box-shadow: 0px 1px 14px rgba(10, 10, 10, 0.2);
 }
 
-.display-text p
+.display-type-content p
 {
 	display: inline-block;
 
-	padding: 0.2em;
-
-	font-size: 1em;
 	font-weight: bolder;
 	font-weight: normal;
 	line-height: 1;
 	word-wrap: break-word;
 	/*text-transform: uppercase;*/
 
-	color: #fff;
+	color: rgba(35, 35, 35, 0.9);
+
+	text-shadow: 0px 1px 14px rgba(95, 67, 204, 0.2);
 }
 
-.display-text .display-type
+.display-type-content .display-type
 {
 	text-align: left;
+
+	padding: 0 0.2em 0.2em 0;
+
+	font-size: 1em;
 }
 
-.display-text .display-temp
+.display-temp-wrapper
+{
+	width: auto;
+	height: auto;
+	position: absolute;
+
+	bottom: 0; right: 0;
+
+	background: rgba(237, 247, 237, 0.8);
+
+	-webkit-filter: blur(1px);
+	filter: blur(0.6px);
+
+	box-shadow: 0px 1px 14px rgba(10, 10, 10, 0.2);
+}
+
+.display-temp-wrapper .display-temp
 {
 	text-align: right;
-	float: right;
 
 	font-size: 0.5em;
+	line-height: 0.5em;
 
 	transition: 400ms ease-in-out;
 }
 
 .display-temp-default
 {
-	opacity: 0;
-	transform: translateX(100%);
-}
-
-.display-text .display-temp sup 
-{ 
-    /*vertical-align: super;*/
-    font-size: smaller;
+	/*opacity: 0;*/
+	/*transform: translateX(100%);*/
 }
 
 
@@ -154,7 +172,7 @@ html, body
 {
 	#display-wrapper
 	{
-		font-size: 25px;
+		/*font-size: 25px;*/
 	}	
 }
 
@@ -162,7 +180,7 @@ html, body
 {
 	#display-wrapper
 	{
-		font-size: 50px;
+		/*font-size: 50px;*/
 	}	
 }
 
@@ -170,7 +188,7 @@ html, body
 {
 	#display-wrapper
 	{
-		font-size: 75px;
+		/*font-size: 75px;*/
 	}
 }
 
@@ -178,7 +196,7 @@ html, body
 {
 	#display-wrapper
 	{
-		font-size: 100px;
+		/*font-size: 100px;*/
 	}
 }
 
