--- a/public/css/weatheredGifs.css
+++ b/public/css/weatheredGifs.css
@@ -105,22 +105,35 @@ html, body
 
 	bottom: 0; right: 0;
 
+	/*SIMPLE*/
 	background: rgba(237, 247, 237, 0.8);
+	/*SIMPLE*/
+
+/*	background: rgba(237, 247, 237, 0.8);
 
 	-webkit-filter: blur(1px);
 	filter: blur(0.6px);
 
-	box-shadow: 0px 1px 14px rgba(10, 10, 10, 0.2);
+	box-shadow: 0px 1px 14px rgba(10, 10, 10, 0.2);*/
 }
 
 .display-temp-wrapper .display-temp
 {
+	/*SIMPLE*/
+	font-size: 0.5em;
 	text-align: right;
+	line-height: 1;
+	padding: 0 0 0.1em 0.1em;
+	box-shadow: 0px -1px 14px rgba(10, 10, 10, 0.2);
+	/*SIMPLE*/
+
+
+/*	text-align: right;
 
 	font-size: 0.5em;
 	line-height: 0.5em;
 
-	transition: 400ms ease-in-out;
+	transition: 400ms ease-in-out;*/
 }
 
 .display-temp-default
